Changed base image to scratch

--- a/k8s/go-echo-deploy.yml
+++ b/k8s/go-echo-deploy.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: tcp-echo-container
-          image: cjimti/go-echo:latest
+          image: todd-go-echo:latest
           imagePullPolicy: Always
           env:
             - name: TCP_PORT
