--- a/k8s/go-echo-deploy.yml
+++ b/k8s/go-echo-deploy.yml
@@ -17,9 +17,9 @@ metadata:
   name: go-echo-role
   namespace: go-echo
 rules:
-- apiGroups: ["*"]
-  resources: ["*"]
-  verbs: ["get", "list", "proxy"]
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
